# python-monorepo

./: LICENSE  README.md
.github/workflows/: app-static-analysis.yaml  core-static-analysis.yaml  reusable-static-analysis.yaml
app/: pyproject.toml
app/tests/: test_core.py
core/: pyproject.toml
core/core/: datamodels.py
core/tests/: test_datamodels.py
