[tool.poetry]
name = "app"
version = "0.1.0"
description = "The main app"
authors = ["Alexander Bonnet <alex.bonnet.us@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
core = { path = "../core", develop = true }

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
ruff = "^0.0.254"
mypy = "^1.1.1"
taskipy = "^1.10.3"
pytest = "^7.2.2"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
check-format = "isort --check . && black --check ."
format = "isort . && black ."
lint = "ruff check ."
typing = "mypy ."
test = "pytest ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
