[tool.poetry]
name = "core"
version = "0.1.0"
description = "Core tools."
authors = ["Alexander Bonnet <alex.bonnet.us@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
ruff = "^0.0.254"
mypy = "^1.1.1"
taskipy = "^1.10.3"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
check-format = "isort --check . && black --check ."
format = "isort . && black ."
lint = "ruff --check ."
typing = "mypy ."
test = "pytest ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
